# QtGL

./: .gitignore  README.md
OGL01/: CMakeLists.txt  mainwidget.cpp  mainwidget.h  openglwidget.cpp  openglwidget.h
OGL02/: CMakeLists.txt  mainwidget.cpp  openglwidget.cpp  openglwidget.h
OGL02/shader/: basic.vert
OGL03/: CMakeLists.txt  mainwidget.ui  openglwidget.cpp  openglwidget.h
OGL03/shader/: basic.frag  basic.vert
OGL04/: CMakeLists.txt  mainwidget.cpp  openglwidget.cpp  openglwidget.h
OGL05/: CMakeLists.txt  OGL05.qrc  geometryengine.cpp  geometryengine.h  openglwidget.cpp  openglwidget.h
OGL05/res/shader/: basic.frag  basic.vert
OGL05/shader/: basic.frag  basic.vert.txt
OGL06/: CMakeLists.txt  OGL06.qrc  geometryengine.cpp  geometryengine.h  mainwidget.cpp  mesh.cpp  mesh.h  model.cpp  model.h  openglwidget.cpp  openglwidget.h
OGL06/res/shader/: cube.vert
OGL06/shader/: basic.frag  basic.frag.txt  basic.vert
ref/: GLSL三种变量类型.md
